# rubalosim

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  movable_object.rs  rule.rs  sensor.rs  simulator.rs  structure.rs
src/simulator/: evaluation.rs  event.rs  parameters.rs
